web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: synergychat-web
  ports:
    - protocol: TCP
      port: 80 # Expose the service on port 80
      targetPort: 8080 # Forward traffic to port 8080 on the pods
